# ScoliosisSegmentation-MS

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: config.py
app/models/: neural_networks.py
app/schemas/: health.py  prediction.py
app/services/: inference.py  pipeline.py
tests/: test_health.py
